--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "castv2": "^0.1.9",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "yargs": "^14.0.0"
   }
 }
